--- a/benchmark_ex.html
+++ b/benchmark_ex.html
@@ -8,11 +8,11 @@
             3) Create an ordered list +
             4) Create a table with 5 columns and 4 rows +
             5) Add an image to each second cell of every row +
-            6) Add a anchor link for every image
-            7) Merge together 2 table cells
-            8) Divide the page using a horizontal line
-            9) Create a container with a nested paragraph and a nested unordered list
-            10) Create a footer with some information about the page creator 
+            6) Add a anchor link for every image +
+            7) Merge together 2 table cells +
+            8) Divide the page using a horizontal line +
+            9) Create a container with a nested paragraph and a nested unordered list +
+            10) Create a footer with some information about the page creator +
         -->
         <head>
             <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -24,6 +24,7 @@
         </head>
         <body>
             <h1>First Benchmark Day at Srive</h1>
+            <hr/>
             <div>
               <ol>
                   <li>Strive school,</li>
@@ -31,45 +32,55 @@
                   <li>Better than preschool!</li>
               </ol>
             </div>
-            <br/><br/><br/>
+            <br/>
             <div>
               <table>
                   <tr>
-                    <th>One</th>
-                    <th>Two</th>
+                    <th colspan="2">One&Two</th>
                     <th>Three</th>
                     <th>Four</th>
                     <th>Five</th>
                   </tr>
                   <tr>
                     <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
                     <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
-                    <td>+</td>
-                  </tr>
-                  <tr>
-                    <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
-                    <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
                     <td>+</td>
                   </tr>
                   <tr>
                     <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
                     <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
                     <td>+</td>
                   </tr>
                   <tr>
                     <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
                     <td>+</td>
-                    <td><img src="bubz_re.jpg"></td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
                     <td>+</td>
                   </tr>
-                </div>
+                  <tr>
+                    <td>+</td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
+                    <td>+</td>
+                    <td><a href="https://www.youtube.com/watch?v=QQNL83fhWJU"><img src="bubz_re.jpg"/></a></td>
+                    <td>+</td>
+                  </tr>
+              </table>
+            </div>
+            <br/>
+            <div>
+              <p>I think that this is nested<ul><li>nested</li></ul></p>
+            </div>
+            <br/>
+            <footer>
+              <p>Author: Martyna Marcy Sowinska</p>
+              <p>Email: <a href="mailto:martyna.sowinska@hotmail.com">martyna.sowinska@hotmail.com</a></p>
+            </footer>
+              
         </body>
 
 </html>
