--- a/benchmark_ex.html
+++ b/benchmark_ex.html
@@ -73,9 +73,9 @@
             </div>
             <br/>
             <div>
-              <p>I think that this is nested<ul><li>nested</li></ul></p>
+              <p>I think that this is nested<ul><li>hmmm?</li></ul></p>
             </div>
-            <br/>
+            <br/><br/>
             <footer>
               <p>Author: Martyna Marcy Sowinska</p>
               <p>Email: <a href="mailto:martyna.sowinska@hotmail.com">martyna.sowinska@hotmail.com</a></p>
